--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.4",
     "morgan": "~1.9.1",
